SID3: group read

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -106,8 +106,8 @@
     "data_name = 'SID21_20231024-0046.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID21_Seq05.cdf'"
+    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "#data_name = 'SID21_Seq05.cdf'"
    ]
   },
   {
