--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/11"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/16"
    ]
   },
   {
@@ -29,7 +29,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
     "import copy\n",
-    "import csv"
+    "import csv\n",
+    "import glob"
    ]
   },
   {
@@ -97,7 +98,10 @@
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(0, cal_mode, cal, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)"
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
+    "\n",
+    "# *** Directory set: set by User ***\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
    ]
   },
   {
@@ -107,25 +111,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "\n",
-    "# *** Ver.2 ***\n",
+    "# *** Ground - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name = 'SID02_20231007-0349.cdf'\n",
-    "data_name = 'SID02_20231117-1607.cdf'\n",
-    "data_name = 'SID02-high_20231019-1749.cdf'\n",
-    "data_name = 'SID02-high_20231020-1218.cdf'\n",
-    "data_name = 'SID02-high_20231020-1222.cdf'\n",
+    "data_name_list = ['SID02_20231007-0349.cdf',\n",
+    "                  'SID02_20231117-1607.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
+    "data_name_list = ['SID02-high_20231019-1749.cdf',\n",
+    "                  'SID02-high_20231020-1218.cdf',\n",
+    "                  'SID02-high_20231020-1222.cdf',\n",
+    "                 ]\n",
     "\n",
     "# 202312 -- TEST\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_FS/cdf/'        # CDF data folder\n",
-    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
-    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
-    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
-    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'\n",
-    "#data_name = 'SID2_20000101T004732-20000101T004929_0.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_FS/cdf/'    # 202312_FS test folder\n",
+    "data_name_list = ['SID2_20000101T004732-20000101T004929_0.cdf',\n",
+    "                  'SID2_20000101T004934-20000101T005147_1.cdf',\n",
+    "                  'SID2_20000101T005151-20000101T005357_2.cdf',\n",
+    "                  'SID2_20000101T005401-20000101T005538_3.cdf',\n",
+    "                  'SID2_20000101T005543-20000101T005624_4.cdf',\n",
+    "                 ]\n",
+    "\"\"\""
    ]
   },
   {
@@ -135,45 +141,138 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.1\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/'        # CDF data folder\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 20230419 ***\n",
-    "#data_name = '2023/04/19/SID2_20230419T135849-20230419T141229.cdf'\n",
-    "#data_name = '2023/04/19/SID2_20230419T141231-20230419T141402.cdf'\n",
+    "data_name_list = [#'04/19/SID2_20230419T135849-20230419T141229.cdf',\n",
+    "                  '04/19/SID2_20230419T141231-20230419T141402.cdf',\n",
+    "                 ]\n",
     "\n",
     "# *** 20230530 ***\n",
-    "#data_name = '2023/05/30/SID2_20230530T100326-20230530T100925.cdf'\n",
-    "#data_name = '2023/05/30/SID2_20230530T100927-20230530T100937.cdf'\n",
+    "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
+    "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
+    "                 ]\n",
     "\n",
     "# *** 20230601 ***\n",
-    "#data_name = '2023/06/01/SID2_20230601T120759-20230601T120857.cdf'\n",
-    "#data_name = '2023/06/01/SID2_20230601T121435-20230601T121533.cdf'\n",
-    "#data_name = '2023/06/01/SID2_20230601T122138-20230601T122236.cdf'\n",
-    "#data_name = '2023/06/01/SID2_20230601T122707-20230601T122805.cdf'\n",
-    "#data_name = '2023/06/01/SID2_20230601T123416-20230601T123514.cdf'\n",
+    "data_name_list = ['06/01/SID2_20230601T120759-20230601T120857.cdf',\n",
+    "                  '06/01/SID2_20230601T121435-20230601T121533.cdf',\n",
+    "                  '06/01/SID2_20230601T122138-20230601T122236.cdf',\n",
+    "                  '06/01/SID2_20230601T122707-20230601T122805.cdf',\n",
+    "                 ]\n",
     "\n",
     "# *** 20230712-13 ***\n",
-    "#data_name = '2023/07/12/SID2_20230712T090434-20230712T093848.cdf'\n",
-    "#data_name = '2023/07/12/SID2_20230712T093942-20230712T101355.cdf'\n",
-    "#data_name = '2023/07/12/SID2_20230712T101449-20230712T104147.cdf'\n",
+    "data_name_list = ['07/12/SID2_20230712T090434-20230712T093848.cdf',\n",
+    "                  '07/12/SID2_20230712T093942-20230712T101355.cdf',\n",
+    "                  '07/12/SID2_20230712T101449-20230712T104147.cdf',\n",
+    "                 ]\n",
+    "data_name_list = ['07/12/SID2_20230712T104149-20230712T232406.cdf']\n",
     "#\n",
-    "#data_name = '2023/07/12/SID2_20230712T104149-20230712T232406.cdf'\n",
-    "#\n",
-    "#data_name = '2023/07/12/SID2_20230712T232408-20230712T235156.cdf'\n",
-    "#\n",
-    "data_name = '2023/07/12/SID2_20230712T235158-20230713T001854.cdf'\n",
-    "# data_name = '2023/07/13/SID2_20230713T001856-20230713T004644.cdf'\n",
-    "#\n",
-    "#data_name = '2023/07/13/SID2_20230713T004648-20230713T011342.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T011436-20230713T014134.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T014136-20230713T020924.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T020928-20230713T023718.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T023720-20230713T030416.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T030510-20230713T033208.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T033210-20230713T040000.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T040002-20230713T042751.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T042753-20230713T045449.cdf'\n",
-    "#data_name = '2023/07/13/SID2_20230713T045543-20230713T050917.cdf'"
+    "data_name_list = ['07/12/SID2_20230712T232408-20230712T235156.cdf']\n",
+    "#      type-III\n",
+    "data_name_list = ['07/12/SID2_20230712T235158-20230713T001854.cdf',\n",
+    "                  '07/13/SID2_20230713T001856-20230713T004644.cdf',\n",
+    "                 ]\n",
+    "#      battery\n",
+    "data_name_list = ['07/13/SID2_20230713T004648-20230713T011342.cdf',\n",
+    "                  '07/13/SID2_20230713T011436-20230713T014134.cdf',\n",
+    "                  '07/13/SID2_20230713T014136-20230713T020924.cdf',\n",
+    "                  '07/13/SID2_20230713T020928-20230713T023718.cdf',\n",
+    "                  '07/13/SID2_20230713T023720-20230713T030416.cdf',\n",
+    "                  '07/13/SID2_20230713T030510-20230713T033208.cdf',\n",
+    "                  '07/13/SID2_20230713T033210-20230713T040000.cdf',\n",
+    "                  '07/13/SID2_20230713T040002-20230713T042751.cdf',\n",
+    "                  '07/13/SID2_20230713T042753-20230713T045449.cdf',\n",
+    "                  '07/13/SID2_20230713T045543-20230713T050917.cdf',\n",
+    "                 ]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1455f800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Ground - Ver.1\n",
+    "\"\"\"\n",
+    "# *** 202105 ***\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202105/'        # CDF data folder\n",
+    "data_name_list = ['SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32770.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32774.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32775.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32776.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32777.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day3_xid32778.cdf',\n",
+    "                 ]\n",
+    "data_name_list = ['SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32772.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32773.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32774.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32775.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32776.cdf',\n",
+    "                  'SID2_20210531_SCPFM_PTR_RPWI_2_day5_xid32777.cdf',\n",
+    "                 ]\n",
+    "\n",
+    "# *** 202106 ***\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202106/'        # CDF data folder\n",
+    "data_name_list = ['SID2_SCTBTV_Phase11_xid32831.cdf',\n",
+    "                  'SID2_SCTBTV_Phase11_xid32832.cdf',\n",
+    "                  'SID2_SCTBTV_Phase11_xid32833.cdf',\n",
+    "                  'SID2_SCTBTV_Phase11_xid32834.cdf',\n",
+    "                 ]\n",
+    "data_name_list = ['SID2_SCTBTV_Phase13_xid32844.cdf',\n",
+    "                  'SID2_SCTBTV_Phase13_xid32845.cdf',\n",
+    "                  'SID2_SCTBTV_Phase13_xid32846.cdf',\n",
+    "                 ]\n",
+    "\n",
+    "# *** 202111 ***\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202111/'        # CDF data folder\n",
+    "data_name_list = ['SID2_SCPFM_PTR_RPWI_delta.RPWI_SCM_TEST_xid32770.cdf',\n",
+    "                  'SID2_SCPFM_PTR_RPWI_delta.RPWI_SCM_TEST_xid32771.cdf',\n",
+    "                  'SID2_SCPFM_PTR_RPWI_delta.RPWI_SCM_TEST_xid32772.cdf',\n",
+    "                 ]\n",
+    "data_name_list = ['SID2_SCPFM_RPWI_30c_xid32776.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32777.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32778.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32779.cdf',\n",
+    "                 ]\n",
+    "\n",
+    "# *** 202207 ***\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202207/'        # CDF data folder\n",
+    "data_name_list = ['SID2_SCPFM_RPWI_30c_xid32776.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32777.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32778.cdf',\n",
+    "                  'SID2_SCPFM_RPWI_30c_xid32779.cdf',\n",
+    "                 ]\n",
+    "\n",
+    "# *** 202208 ***\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202208/'        # CDF data folder\n",
+    "data_name_list = ['SID2_20220824_HF-FFT-rerun_xid32791.cdf',\n",
+    "                  'SID2_20220824_HF-FFT-rerun_xid32792.cdf',\n",
+    "                  'SID2_20220824_HF-FFT-rerun_xid32793.cdf',\n",
+    "                  ]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1cddccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Group read\n",
+    "\"\"\"\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_name = 'SID02*.cdf'\n",
+    "cdf_file = data_dir + data_name\n",
+    "data_name_list = glob.glob(cdf_file)\n",
+    "num_list = len(data_name_list)\n",
+    "data_name_list.sort()\n",
+    "for i in range(num_list):\n",
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
+    "\"\"\""
    ]
   },
   {
@@ -188,16 +287,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f26ed42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class struct:\n",
+    "    pass\n",
+    "\n",
+    "data = struct()\n",
+    "num_list = len(data_name_list)\n",
+    "\n",
+    "for i in range(num_list):\n",
+    "    data_name = data_name_list[i]\n",
+    "    cdf_file = data_dir + data_name\n",
+    "    print(i, cdf_file)\n",
+    "\n",
+    "    cdf = pycdf.CDF(cdf_file)\n",
+    "    data1 = juice_sid2.hf_sid2_read(cdf, cf)\n",
+    "\n",
+    "    if i==0:\n",
+    "        data = data1\n",
+    "        print(data.Eu_i.shape)\n",
+    "    else:\n",
+    "        data = juice_sid2.hf_sid2_add(data, data1)\n",
+    "        print(data.Eu_i.shape)\n",
+    "\n",
+    "print(data_name);  data_name = os.path.split(data_name)[1];  print(data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5353f848",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdf_file = data_dir + data_name\n",
-    "%ls $cdf_file\n",
-    "\n",
-    "cdf = pycdf.CDF(cdf_file)\n",
-    "# data = juice_sid2.juice_getdata_hf_sid2(cdf, cf)\n",
-    "data = juice_sid2.hf_sid2_read(cdf, cf)\n",
     "data = juice_sid2.hf_sid2_proc(data)\n",
     "\n",
     "date1 = data.epoch[0]\n",
@@ -244,9 +368,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 10))\n",
-    "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3)\n",
-    "ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
+    "fig = plt.figure(figsize=(12, 14))\n",
+    "ax1 = fig.add_subplot(6, 1, 1);  ax2 = fig.add_subplot(6, 1, 2);  ax3 = fig.add_subplot(6, 1, 3)\n",
+    "ax4 = fig.add_subplot(6, 1, 4);  ax5 = fig.add_subplot(6, 1, 5);  ax6 = fig.add_subplot(6, 1, 6)\n",
     "\n",
     "ax1.plot(np.ravel(data.Eu_i[:][:]), '-r', linewidth=.5, label='Eu_i'); ax1.plot(np.ravel(data.Eu_q[:][:]), ':g', linewidth=.5, label='Eu_q')\n",
     "ax2.plot(np.ravel(data.Ev_i[:][:]), '-r', linewidth=.5, label='Ev_i'); ax2.plot(np.ravel(data.Ev_q[:][:]), ':g', linewidth=.5, label='Ev_q')\n",
@@ -255,23 +379,26 @@
     "ax4.plot(np.ravel(data.freq_step*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax4.plot(np.ravel(data.freq_width*10), ':b', linewidth=1.0, label='width*10')\n",
     "ax4.plot(np.ravel(data.sweep_start)*data.frequency[0][-1][0], '-r', linewidth=.5, label='Sweep Start');\n",
-    "ax5.plot(np.ravel(data.epoch[:]), '.')\n",
-    "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  ax5.set_xlabel(str_date)\n",
+    "ax5.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax5.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax5.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "ax6.plot(np.ravel(data.epoch[:]), '.')\n",
+    "\n",
+    "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  ax5.set_ylabel('T [degC]');  \n",
+    "ax6.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF RAW (SID-2)]  ' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
-    "ax4.legend(loc='upper right', fontsize=8)\n",
+    "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
     "\"\"\"\n",
     "xlim=[0, len(np.ravel(data.Eu_i[:][:]))];  print(xlim)\n",
-    "ax1.set_xlim(xlim);  ax3.set_xlim(xlim);  ax5.set_xlim(xlim);  ax7.set_xlim(xlim)\n",
+    "ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
     "\"\"\"\n",
     "# range: Y-axis\n",
-    "\"\"\"\n",
-    "ylim=[-10**(p_max0-3.5), 10**(p_max0-3.5)]\n",
-    "ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "ylim=[-10**(p_max0-3), 10**(p_max0-3)]\n",
+    "ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min0, f_max0]; ax4.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
@@ -458,13 +585,14 @@
    "source": [
     "# Sweep_num\n",
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
+    "# n_sweep1 = 50;  n_sweep2 = 51;  n_sweep3 = 52\n",
     "# Y-range\n",
     "p_min = p_min0-2;   p_max = p_max0\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
     "    f_min = f_min0;  f_max = 5000\n",
-    "f_mode = 0;   f_min = 5000;  f_max = 10000;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
+    "# f_mode = 0;   f_min = 5000;  f_max = 10000;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "\n",
     "fig = plt.figure(figsize=(12, 12))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
@@ -560,7 +688,9 @@
     "num_1d = np.arange(n_time0)\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,16])\n",
-    "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2); ax3 = fig2d.add_subplot(4, 1, 3); ax4 = fig2d.add_subplot(4, 1, 4)\n",
+    "ax1 = fig2d.add_subplot(5, 1, 1);  ax2 = fig2d.add_subplot(5, 1, 2); ax3 = fig2d.add_subplot(5, 1, 3); ax4 = fig2d.add_subplot(5, 1, 4)\n",
+    "if time_mode == 1:\n",
+    "    ax5 = fig2d.add_subplot(5, 1, 5)\n",
     "\n",
     "# Y-axis\n",
     "ax1.set_ylim(f_min, f_max); ax2.set_ylim(f_min, f_max); ax3.set_ylim(f_min, f_max); ax4.set_ylim(f_min, f_max)\n",
@@ -570,7 +700,10 @@
     "\n",
     "# X-axis\n",
     "ax1.set_title('EE');  ax2.set_title('EuEu');  ax3.set_title('EvEv'); ax4.set_title('EwEw')\n",
-    "ax4.set_xlabel(str_date)\n",
+    "if time_mode == 1:\n",
+    "    ax5.set_xlabel(str_date)\n",
+    "else:\n",
+    "    ax4.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
     "print(num_1d.shape, freq_1d.shape, EE_2d.shape)\n",
@@ -579,6 +712,8 @@
     "    p2 = ax2.pcolormesh(num_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(num_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p4 = ax4.pcolormesh(num_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p5 = ax5.plot(np.ravel(data.epoch[:]), '.')\n",
+    "    pp4 = fig2d.colorbar(p4, ax=ax5, orientation=\"vertical\"); pp4.set_label(power_str)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d,   norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
@@ -588,6 +723,17 @@
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\"); pp2.set_label(power_str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp3.set_label(power_str)\n",
     "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\"); pp4.set_label(power_str)\n",
+    "\n",
+    "# range: X-axis\n",
+    "if time_mode == 1:\n",
+    "    xlim=[num_1d[0], num_1d[-1]]\n",
+    "    ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
+    "\n",
+    "# range: Y-axis\n",
+    "\"\"\"\n",
+    "ylim=[10**(p_min), 10**(p_max)]\n",
+    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
+    "\"\"\"\n",
     "\n",
     "# Plot\n",
     "plt.show\n",
@@ -998,7 +1144,8 @@
     "        if mask_list0[num_mask,2] > 0:\n",
     "            spec_msk0.EE[:,i-1] = 0\n",
     "            spec_msk0.EE[:,i] = 0\n",
-    "            spec_msk0.EE[:,i+1] = 0\n",
+    "            if i<freq_1d.shape[0]-1:\n",
+    "                spec_msk0.EE[:,i+1] = 0\n",
     "\n",
     "# delete\n",
     "mask_index0    = np.where(spec_msk0.EE[0] == 0)\n",
