--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/11/18"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/12"
    ]
   },
   {
@@ -108,8 +108,8 @@
     "data_name = 'SID04-comp1-20231117-1532.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "data_name = 'SID04_Seq01.cdf'\n",
+    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "#data_name = 'SID04_Seq01.cdf'\n",
     "#data_name = 'SID04_Seq02.cdf'\n",
     "#data_name = 'SID04_Seq16.cdf'\n",
     "#data_name = 'SID04_Seq18.cdf'\n",
@@ -221,7 +221,7 @@
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(cal_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max, f_min)"
+    "print(power_str, \"   f_MAX/min:\", f_max, f_min, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])"
    ]
   },
   {
