--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -144,7 +144,6 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver. 1 ***\n",
-    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 2023/4/20 before deployment of MAG-BOOM\n",
@@ -166,6 +165,7 @@
     "                 ]\n",
     "# *** 2023/5/23 after Y deployment of RWI\n",
     "data_name_list = ['05/23/SID3_20230523T110933-20230523T111149.cdf']\n",
+    "\"\"\"\n",
     "# *** 2023/5/23 background\n",
     "data_name_list = ['05/23/SID3_20230523T121538-20230523T122526.cdf',\n",
     "                  '05/23/SID3_20230523T124134-20230523T125122.cdf',\n",
@@ -272,6 +272,7 @@
    "outputs": [],
    "source": [
     "# *** Group read\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/05/23/'        # CDF data folder\n",
     "data_name = 'SID3*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
@@ -279,7 +280,8 @@
     "num_list = len(data_name_list)\n",
     "data_name_list.sort()\n",
     "for i in range(num_list):\n",
-    "    data_name_list[i] = os.path.split(data_name_list[i])[1]"
+    "    data_name_list[i] = os.path.split(data_name_list[i])[1]\n",
+    "\"\"\""
    ]
   },
   {
@@ -661,15 +663,15 @@
     "    fig.savefig(png_fname)\n",
     "\n",
     "# Peak\n",
-    "print(\"[First]\")\n",
+    "print(f\"[First - {n0}]\")\n",
     "peak_E = np.ravel(data.EuEu[n0]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EvEv[n0]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EwEw[n0]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "print(\"[Mid]\")\n",
+    "print(f\"[Mid - {n1}]\")\n",
     "peak_E = np.ravel(data.EuEu[n1]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EvEv[n1]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EwEw[n1]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
-    "print(\"[Last]\")\n",
+    "print(f\"[Last - {n2}]\")\n",
     "peak_E = np.ravel(data.EuEu[n2]); peak_f = np.argmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EvEv[n2]); peak_f = np.argmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")\n",
     "peak_E = np.ravel(data.EwEw[n2]); peak_f = np.argmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), \"at\", '{:.1f}'.format(freq1[peak_f]), \"kHz\")"
