--- a/JUICE-CDF-HF-SID2_sp_hires.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_hires.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a High-res QL -- 2023/12/16"
+    "# JUICE RPWI HF SID2 (RAW): L1a High-res QL -- 2023/12/23"
    ]
   },
   {
@@ -103,7 +103,6 @@
     "data_name_list = ['SID02_20231007-0349.cdf',\n",
     "                  'SID02_20231117-1607.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_name_list = ['SID02-high_20231019-1749.cdf',\n",
     "                  'SID02-high_20231020-1218.cdf',\n",
     "                  'SID02-high_20231020-1222.cdf',\n",
@@ -111,12 +110,23 @@
     "\n",
     "# 202312 -- TEST\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_FS/cdf/'    # 202312_FS test folder\n",
-    "data_name_list = ['SID2_20000101T004732-20000101T004929_0.cdf',\n",
-    "                  'SID2_20000101T004934-20000101T005147_1.cdf',\n",
-    "                  'SID2_20000101T005151-20000101T005357_2.cdf',\n",
-    "                  'SID2_20000101T005401-20000101T005538_3.cdf',\n",
-    "                  'SID2_20000101T005543-20000101T005624_4.cdf',\n",
+    "data_name_list = ['SID02_20000101T004732-20000101T004929_0.cdf',\n",
+    "                  'SID02_20000101T004934-20000101T005147_1.cdf',\n",
+    "                  'SID02_20000101T005151-20000101T005357_2.cdf',\n",
+    "                  'SID02_20000101T005401-20000101T005538_3.cdf',\n",
+    "                  'SID02_20000101T005543-20000101T005624_4.cdf',\n",
     "                 ]\n",
+    "\n",
+    "# 202312 -- Checkout\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
+    "data_name_list = ['SID02_RPWI_HF_FFT_00000.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00001.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00002.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00003.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00004.cdf',\n",
+    "                  #'SID02_RPWI_S8_272.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -315,7 +325,10 @@
     "str_date = date1 + \"  -  \" + date2\n",
     "print(str_date)\n",
     "\n",
-    "print(data.Eu_i.shape)\n",
+    "#print(data.Eu_i.shape)\n",
+    "#print(data.N_step)\n",
+    "#print(data.N_samp)\n",
+    "#print(data.N_samp * data.N_step)\n",
     "n_time0 = data.Eu_i.shape[0]\n",
     "n_freq0 = data.Eu_i.shape[1]\n",
     "f_min0 = data.frequency[0][0]\n",
@@ -363,9 +376,10 @@
     "ax4.plot(np.ravel(data.freq_step*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax4.plot(np.ravel(data.freq_width*10), ':b', linewidth=1.0, label='width*10')\n",
     "ax4.plot(np.ravel(data.sweep_start)*data.frequency[0][-1], '-r', linewidth=.5, label='Sweep Start')\n",
-    "ax5.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
-    "ax5.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
-    "ax5.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "ax5.plot(np.ravel(data.T_HF_FPGA),  '.r', label='T (HK-FPGA)')\n",
+    "ax5.plot(np.ravel(data.T_RWI_CH1),  '.b', label='T (RWI1)')\n",
+    "ax5.plot(np.ravel(data.T_RWI_CH2),  '.g', label='T (RWI2)')\n",
+    "ax5.plot(np.ravel(data.cal_signal*10), '.k', label='CAL')\n",
     "ax6.plot(np.ravel(data.epoch[:]), '.')\n",
     "#\n",
     "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  ax5.set_ylabel('T [degC]');  \n",
