--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/12"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/22"
    ]
   },
   {
@@ -114,7 +114,11 @@
     "#data_name = 'SID04_Seq16.cdf'\n",
     "#data_name = 'SID04_Seq18.cdf'\n",
     "#data_name = 'SID04_Seq19.cdf'\n",
-    "#data_name = 'SID04_Seq20.cdf'"
+    "#data_name = 'SID04_Seq20.cdf'\n",
+    "\n",
+    "# 202312 -- Checkout\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
+    "data_name = 'SID4_RPWI_NEWv2_SCI.cdf'"
    ]
   },
   {
