SID2: CAL selection

--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/11/18"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2023/12/24"
    ]
   },
   {
@@ -75,8 +75,8 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "band_mode = 0                           # 0: sum    1: /Hz\n",
+    "unit_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
@@ -86,7 +86,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
