--- a/JUICE-CDF-HF-SID2_sp_hires.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_hires.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a High-res QL -- 2023/12/23"
+    "# JUICE RPWI HF SID2 (RAW): L1a High-res QL -- 2023/12/24"
    ]
   },
   {
@@ -74,7 +74,8 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "cal_mode = 0                            # 0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "band_mode = 0                           # [Power]      0: sum      1: /Hz\n",
+    "unit_mode = 0                           # 0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "\n",
     "# *** Parameter set ***\n",
@@ -82,8 +83,8 @@
     "p_raw_max = 7.0                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 0.0                         # background: 2.5   CAL: 5\n",
     "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0 = juice_cdf.cal_factors(0, cal_mode, cal, p_raw_max, p_raw_min)\n",
+    "# *** Conversion factor: unit_mode ***\n",
+    "cf, p_max0, p_min0 = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
