--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/22"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/24"
    ]
   },
   {
@@ -75,8 +75,8 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "band_mode = 0                           # 0: sum    1: /Hz\n",
+    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
@@ -86,7 +86,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
@@ -214,7 +214,7 @@
     "E_ANGvw_2d = data.E_ANGvw.transpose()\n",
     "E_ANGwu_2d = data.E_ANGwu.transpose()\n",
     "freq_width_2d  = data.freq_width.transpose()\n",
-    "if unit_mode == 1:\n",
+    "if band_mode == 1:\n",
     "    EuEu_2d = EuEu_2d / freq_width_2d / 1000\n",
     "    EvEv_2d = EvEv_2d / freq_width_2d / 1000\n",
     "    EwEw_2d = EwEw_2d / freq_width_2d / 1000\n",
@@ -224,7 +224,7 @@
     "#\n",
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
-    "power_str = juice_cdf.power_label(cal_mode, unit_mode)\n",
+    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
     "print(power_str, \"   f_MAX/min:\", f_max, f_min, \"   num of f, step, window:\", N_frequency, data.freq_step[0][0], data.freq_width[0][0])"
    ]
   },
