--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/11/18"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/12/24"
    ]
   },
   {
@@ -76,8 +76,8 @@
    "outputs": [],
    "source": [
     "# *** Mode set ***\n",
-    "unit_mode = 0                           # 0: sum    1: /Hz\n",
-    "cal_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "band_mode = 0                           # 0: sum    1: /Hz\n",
+    "unit_mode = 0                            # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
     "f_mode = 0                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "\n",
@@ -87,7 +87,7 @@
     "p_raw_min = 4.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, cal_mode, cal, p_raw_max, p_raw_min)"
+    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)"
    ]
   },
   {
@@ -190,7 +190,7 @@
     "# EE_power2 = data.EE[n_time0][0:N_frequency]\n",
     "#\n",
     "freq_width_2d = data.freq_width.transpose()\n",
-    "if unit_mode == 1:\n",
+    "if band_mode == 1:\n",
     "    EE_2d = EE_2d / freq_width_2d / 1000 * data.subdiv_reduction[0]\n",
     "    # EE_power1 = EE_power1 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
     "    # EE_power2 = EE_power2 / freq_width1 / 1000 * data.subdiv_reduction[0]\n",
@@ -200,7 +200,7 @@
     "\n",
     "f_min = freq_1d[0]\n",
     "f_max = freq_1d[N_frequency-1]\n",
-    "power_str = juice_cdf.power_label(cal_mode, unit_mode)"
+    "power_str = juice_cdf.power_label(band_mode, unit_mode)"
    ]
   },
   {
