--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2023/12/27"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "filter_mode = 0                         # 0: read     1: make\n",
     "\n",
     "# *** Power range set ***\n",
-    "cal = 0                                 # [Power]      0: background     1: CAL     2; all\n",
+    "cal = 2                                 # [Power]      0: background     1: CAL     2; all\n",
     "p_raw_max = 7.0                         #              background: 7.5   CAL: 10\n",
     "p_raw_min = 0.0                         #              background: 2.5   CAL: 5\n",
     "cf, p_max0, p_min0 = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
@@ -154,21 +154,27 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.1\n",
-    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 20230419 ***\n",
     "data_name_list = ['04/19/SID2_20230419T135849-20230419T141229.cdf',\n",
     "                  '04/19/SID2_20230419T141231-20230419T141402.cdf',\n",
     "                 ]\n",
-    "\n",
     "# *** 20230530 ***\n",
     "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
     "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
     "                 ]\n",
-    "\n",
+    "\"\"\"\n",
     "# *** 20230601 ***\n",
     "data_name_list = ['06/01/SID2_20230601T120759-20230601T120857.cdf',\n",
+    "                  '06/01/SID2_20230601T121435-20230601T121533.cdf',\n",
+    "                  '06/01/SID2_20230601T122138-20230601T122236.cdf',\n",
+    "                  '06/01/SID2_20230601T122707-20230601T122805.cdf',\n",
+    "                 ]\n",
+    "# *** all: 202305-06 ***\n",
+    "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
+    "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
+    "                  '06/01/SID2_20230601T120759-20230601T120857.cdf',\n",
     "                  '06/01/SID2_20230601T121435-20230601T121533.cdf',\n",
     "                  '06/01/SID2_20230601T122138-20230601T122236.cdf',\n",
     "                  '06/01/SID2_20230601T122707-20230601T122805.cdf',\n",
@@ -222,9 +228,7 @@
     "                 ]\n",
     "\n",
     "# ALL\n",
-    "data_name_list = ['04/19/SID2_20230419T135849-20230419T141229.cdf',\n",
-    "                  '04/19/SID2_20230419T141231-20230419T141402.cdf',\n",
-    "                  '05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
+    "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
     "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
     "                  '06/01/SID2_20230601T120759-20230601T120857.cdf',\n",
     "                  '06/01/SID2_20230601T121435-20230601T121533.cdf',\n",
@@ -398,7 +402,7 @@
     "    print(i, cdf_file)\n",
     "\n",
     "    cdf = pycdf.CDF(cdf_file)\n",
-    "    data1 = juice_sid2.hf_sid2_read(cdf, cf)\n",
+    "    data1 = juice_sid2.hf_sid2_read(cdf)\n",
     "\n",
     "    if i==0:\n",
     "        data = data1\n",
@@ -546,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep0 = 0;    n_sweep1 = n_sweep0 + 4\n",
+    "n_sweep0 = 0;    n_sweep1 = n_sweep0 + 6\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep0, n_sweep1, \"in total of\", n_time0)\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
@@ -599,8 +603,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = 0  # n_time0//2  \n",
-    "n_step0 = 0;  n_step1 = n_step0 + 3\n",
+    "n_sweep = 1  # n_time0//2  \n",
+    "n_step0 = 0;  n_step1 = n_step0 + 6\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0,  \"[Steps]\", n_step0, \"-\", n_step1)\n",
     "\n",
     "fig = plt.figure(figsize=(12, 8))\n",
@@ -659,7 +663,6 @@
     "spec = juice_sid2.hf_sid2_getspec(data, cal)\n",
     "n_time0 = spec.EE.shape[0]\n",
     "EE_2d   = spec.EE.transpose();         EuEu_2d = spec.EuEu.transpose();         EvEv_2d = spec.EvEv.transpose();         EwEw_2d = spec.EwEw.transpose()\n",
-    "\n",
     "# Median formation\n",
     "EE_med     = np.median(spec.EE, axis=0); EuEu_med = np.median(spec.EuEu, axis=0); EvEv_med = np.median(spec.EvEv, axis=0); EwEw_med = np.median(spec.EwEw, axis=0)\n",
     "\n",
@@ -1580,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7c2f49c8",
    "metadata": {},
    "outputs": [],
